Use Deepseek instead of Qwen for Fireworks tests (#2781)
On Fireworks, 'accounts/fireworks/models/qwen2p5-72b-instruct' seems
to be broken - it's returning
"Model not found, inaccessible, and/or not deployed" on the playground,
locally, and on CI without the provider-proxy cache

--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -981,14 +981,14 @@ max_tokens = 500
 
 [functions.basic_test.variants.fireworks-extra-body]
 type = "chat_completion"
-model = "qwen2p5-72b-instruct"
+model = "fireworks::accounts/fireworks/models/deepseek-r1-0528"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 extra_body = [{ pointer = "/temperature", value = 0.123 }]
 
 [functions.basic_test.variants.fireworks-extra-headers]
 type = "chat_completion"
-model = "qwen2p5-72b-instruct"
+model = "fireworks::accounts/fireworks/models/deepseek-r1-0528"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 max_tokens = 100
 extra_headers = [{ name = "Authorization", value = "invalid_fireworks_auth" }]
