Optimization: GCP Vertex Gemini (#2721)
* add optimization functions

* add launch and poll

* add optimization test

* update RenderedSample interface

* update bucket and project is

* Set explicit None for gcp creds and skip test

* add node bindings

* type error

* optimization/gcp_vertex_gemini pyo3 support

* build node bindings

* update pyo3 client

* add import to lib.rs

* fix endpoint id

* remove internal/tensorzero-node/deny.toml

* clean up bad adds

* serialize job state messages

* error is tuned_model.endpoint is None

* upload train val data in parallel

* use location_subdomain_prefix

* remove job_id from GCPVertexGeminiSFTJobHandle

* add tools

* add tools

* capitalize tool types

* refactor GCPVertexGeminiRequestMessage

* handle unkonwn

* resolve unknown and deduplicate

* remove mock server tests

* final cleanup

* remove empty content block error

* fix py error

* update docstring and encryption spec

* Remove unused TryFrom<Credential> for GCPVertexCredentials

Updated optimization module to use build_creds_caching_default_with_fn
for consistency with main provider code.

---------

Co-authored-by: Aaron Hill <aaron@tensorzero.com>

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -449,7 +449,7 @@ jobs:
           done
 
       - name: Test (Rust)
-        run: cargo test-optimization -- --skip together
+        run: cargo test-optimization -- --skip gcp --skip together
 
   build-gateway-container:
     uses: ./.github/workflows/build-gateway-container.yml
