--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -20,7 +20,14 @@ test-optimization = [
     "--profile",
     "optimization",
 ]
-
+test-optimization-mock = [
+    "nextest",
+    "run",
+    "--features",
+    "e2e_tests",
+    "--profile",
+    "optimization-mock",
+]
 # Runs e2e tests that don't require any credentials available.
 # This is useful for both running on PR CI (where we don't have creds at all),
 # and for testing against several different ClickHouse versions (to avoid spending lots of money on inference).
