--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
+manual_string_new = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
