--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,10 +74,11 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
-redundant_closure_for_method_calls = "deny"
+ignored_unit_patterns = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
+redundant_closure_for_method_calls = "deny"
 todo = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
