--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -214,7 +214,7 @@ routing = ["gcp_vertex_gemini"]
 
 [models."gcp-gemini-2.5-pro".providers.gcp_vertex_gemini]
 type = "gcp_vertex_gemini"
-model_id = "gcp-gemini-2.5-pro"
+model_id = "gemini-2.5-pro"
 location = "global"
 project_id = "tensorzero-public"
 # Set the thinking budget to the minimum value.
@@ -263,7 +263,7 @@ routing = ["google_ai_studio_gemini"]
 
 [models."gemini-2.5-pro".providers.google_ai_studio_gemini]
 type = "google_ai_studio_gemini"
-model_name = "gcp-gemini-2.5-pro"
+model_name = "gemini-2.5-pro"
 # Set the thinking budget to the minimum value.
 # This speeds up our tests, saves us some tokens, and prevents the model from
 # hitting our token limit
@@ -276,7 +276,7 @@ routing = ["google_ai_studio_gemini"]
 
 [models."gemini-2.5-pro-dynamic".providers.google_ai_studio_gemini]
 type = "google_ai_studio_gemini"
-model_name = "gcp-gemini-2.5-pro"
+model_name = "gemini-2.5-pro"
 api_key_location = "dynamic::google_ai_studio_api_key"
 # Set the thinking budget to the minimum value.
 # This speeds up our tests, saves us some tokens, and prevents the model from
@@ -2176,7 +2176,7 @@ max_tokens = 100
 
 [functions.json_success.variants.google_ai_studio_gemini_pro_002_json_mode_off]
 type = "chat_completion"
-model = "gcp-gemini-2.5-pro"
+model = "gemini-2.5-pro"
 system_template = "../../fixtures/config/functions/basic_test/prompt/system_template.minijinja"
 user_template = "../../fixtures/config/functions/json_success/prompt/user_template.minijinja"
 json_mode = "off"
