--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -11,6 +11,7 @@ bind_address = "0.0.0.0:3000"
 debug = true
 enable_template_filesystem_access = true
 export.otlp.traces.enabled = true
+unstable_error_json = true
 
 [object_storage]
 type = "disabled"
