Use 'aws s3 sync' to download from R2 when we have creds
This will avoid using the public dev endpoint for PRs
made from the tensorzero repository, while still allowing
external PRs to pass CI

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -9,6 +9,8 @@ on:
 env:
   FORCE_COLOR: 1
   TENSORZERO_CLICKHOUSE_URL: "http://chuser:chpassword@localhost:8123/tensorzero"
+  R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
+  R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
 
 jobs:
   check-docker-compose:
