--- a/examples/production-deployment-k8s-helm/values.yaml
+++ b/examples/production-deployment-k8s-helm/values.yaml
@@ -115,4 +115,4 @@ configMap:
 
       # [object_storage]
       # type = "filesystem"
-      # path = /app/storage/
+      # path = "/app/storage/"
