--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,7 @@ todo = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
 unreachable = "deny"
+unused_self = "deny"
 unwrap_used = "deny"
 
 [profile.performance]
