Migrate a simple check to Buildkite

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,11 +6,12 @@ agents:
 steps:
   - label: "Clickhouse Cloud tests - normal release channel"
     concurrency: 1
-    concurrency_group: 'clickhouse-cloud-normal-${CLICKHOUSE_ID}'
+    concurrency_group: "clickhouse-cloud-normal-${CLICKHOUSE_ID}"
     command: CLICKHOUSE_PREFIX="dev-tensorzero-e2e-tests-instance-" ./ci/buildkite/test-clickhouse-cloud.sh
+
   - label: "Clickhouse Cloud tests - fast release channel"
     concurrency: 1
-    concurrency_group: 'clickhouse-cloud-fast-${CLICKHOUSE_ID}'
+    concurrency_group: "clickhouse-cloud-fast-${CLICKHOUSE_ID}"
     command: CLICKHOUSE_PREFIX="dev-tensorzero-e2e-tests-fast-instance-" ./ci/buildkite/test-clickhouse-cloud.sh
 
 notify:
