--- a/ci/buildkite/commit-checks.yml
+++ b/ci/buildkite/commit-checks.yml
@@ -7,6 +7,8 @@ steps:
 
   - label: "Build `tensorzero/gateway` Docker container"
     command: docker build -t tensorzero/gateway -f gateway/Dockerfile .
+    agents:
+      queue: "linux-amd64-large"
 
 notify:
   - github_commit_status:
