--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -124,6 +124,7 @@ mime = { workspace = true }
 mime_guess = "2.0.5"
 indexmap = "2.10.0"
 base64 = "0.22.1"
+thiserror = "2.0.12"
 
 
 [dev-dependencies]
