--- a/ci/buildkite/commit-checks.yml
+++ b/ci/buildkite/commit-checks.yml
@@ -10,6 +10,7 @@ steps:
   #   key: "build-gateway-docker-container"
 
   - label: ":rust: Build"
+    key: "rust-build"
     command: cargo build --workspace --verbose
     plugins:
       - artifacts#v1.9.3:
@@ -17,6 +18,7 @@ steps:
           compressed: target.tgz
 
   - label: ":rust: Lint"
+    depends_on: "rust-build"
     command: cargo fmt -- --check
     plugins:
       - artifacts#v1.9.3:
@@ -24,6 +26,7 @@ steps:
           compressed: target.tgz
 
   - label: ":rust: Clippy"
+    depends_on: "rust-build"
     command: cargo clippy
     plugins:
       - artifacts#v1.9.3:
