--- a/ci/buildkite/commit-checks.yml
+++ b/ci/buildkite/commit-checks.yml
@@ -8,32 +8,28 @@ steps:
   # - label: "Build `tensorzero/gateway` Docker container"
   #   command: docker build -t tensorzero/gateway:ci -f gateway/Dockerfile .
   #   key: "build-gateway-docker-container"
+  #
   - label: ":rust: Build Gateway"
     key: "rust-build"
     command: cargo build -p gateway
-    cache: "target"
-    # plugins:
-    #   - artifacts#v1.9.3:
-    #       upload: "target"
-    #       compressed: target.tgz
+    plugins:
+      - artifacts#v1.9.3:
+          upload: "target"
 
   - label: ":rust: Lint Gateway"
     depends_on: "rust-build"
     command: cargo fmt -p gateway -- --check
-    cache: "target"
-    # plugins:
-    #   - artifacts#v1.9.3:
-    #       download: "target"
-    #       compressed: target.tgz
+    plugins:
+      - artifacts#v1.9.3:
+          download: "target"
 
   - label: ":rust: Clippy"
     depends_on: "rust-build"
     command: cargo clippy -p gateway
     cache: "target"
-    # plugins:
-    #   - artifacts#v1.9.3:
-    #       download: "target"
-    #       compressed: target.tgz
+    plugins:
+      - artifacts#v1.9.3:
+          download: "target"
 
 notify:
   - github_commit_status:
