[Issue-1961]: Handle clippy::unreadable_literal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,14 +74,15 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
-redundant_closure_for_method_calls = "deny"
 panic = "deny"
 print_stderr = "deny"
 print_stdout = "deny"
+redundant_closure_for_method_calls = "deny"
 todo = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
 unreachable = "deny"
+unreadable_literal = "deny"
 unwrap_used = "deny"
 
 [profile.performance]
