[Issue-1961]: Handle clippy::if_not_else

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ unsafe_code = "forbid"
 allow_attributes = "deny"
 dbg_macro = "deny"
 expect_used = "deny"
+if_not_else = "deny"
 match_bool = "deny"
 panic = "deny"
 print_stderr = "deny"
