[Issue-1961]: Handle clippy::trivially_copy_pass_by_ref

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ print_stderr = "deny"
 print_stdout = "deny"
 redundant_closure_for_method_calls = "deny"
 todo = "deny"
+trivially_copy_pass_by_ref = "deny"
 unimplemented = "deny"
 uninlined_format_args = "deny"
 unreachable = "deny"
