Add `[gateway.template_filesystem_access]` section (#2848)
* Add `[gateway.template_filesystem_access]` section

The old `gateway.enable_template_filesystem_access` field
is now deprecated.

The new config section looks like:

```toml
[gateway.template_filesystem_access]
enabled = true
base_path = "some/path"/
```

`base_path` is optional - if set, it configured the base path
used for template filesystem access. By default, this is the directory
of the config file.

* Address merge fallout

* Fix node test

* Address review comments

* Add missing file

--- a/tensorzero-core/tests/e2e/tensorzero.toml
+++ b/tensorzero-core/tests/e2e/tensorzero.toml
@@ -9,7 +9,7 @@
 [gateway]
 bind_address = "0.0.0.0:3000"
 debug = true
-enable_template_filesystem_access = true
+template_filesystem_access.enabled = true
 export.otlp.traces.enabled = true
 unstable_error_json = true
 
