--- a/tensorzero-core/tests/e2e/docker-compose.yml
+++ b/tensorzero-core/tests/e2e/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       clickhouse:
         condition: service_healthy
     command: ["--default-config"]
+    extra_hosts:
+      - "howdy.tensorzero.com:127.0.0.1"
     healthcheck:
       test:
         [
