--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -183,7 +183,7 @@ jobs:
       - name: Start UI Docker container
         working-directory: ui
         run: |
-          docker compose -f fixtures/docker-compose.ui.yml up --no-build -d
+          docker compose -f fixtures/docker-compose.ui.yml up --no-build -d --wait
 
       - name: Run UI E2E tests
         id: e2e_tests
@@ -196,6 +196,11 @@ jobs:
         if: always()
         working-directory: ui
         run: docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml logs -t
+
+      - name: Print container health checks
+        if: always()
+        working-directory: ui
+        run: docker inspect --format "{{json .State.Health }}" $(docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml ps -q ui) | jq
 
       - name: Make sure the current commit short hash is in the Docker Compose gateway logs
         if: always()
