--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -59,7 +59,7 @@ jobs:
         echo "TENSORZERO_UI_TAG=sha-${{ github.sha }}" >> fixtures/.env
         export TENSORZERO_SKIP_LARGE_FIXTURES=1
         docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml -f ../ci/internal-network.yml up --no-build -d
-        docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml -f ../ci/internal-network.yml up wait ui
+        docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml -f ../ci/internal-network.yml wait ui
 
     - name: Print Docker Compose logs
       if: always()
