--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -338,6 +338,7 @@ jobs:
     continue-on-error: ${{ matrix.clickhouse_version.allow_failure }}
     strategy:
       matrix:
+        replicated: [true, false]
         clickhouse_version:
           - tag: "24.12-alpine"
             prefix: "24.12"
@@ -381,8 +382,13 @@ jobs:
         run: |
           echo "TENSORZERO_CLICKHOUSE_URL=http://chuser:chpassword@localhost:8123/tensorzero_e2e_tests" >> $GITHUB_ENV
 
-      - name: Launch ClickHouse container for E2E tests
+      - name: Launch non-replicated ClickHouse container for E2E tests
+        if: matrix.replicated == false
         run: TENSORZERO_CLICKHOUSE_VERSION=${{ matrix.clickhouse_version.tag }} docker compose -f tensorzero-core/tests/e2e/docker-compose.yml up clickhouse --wait
+
+      - name: Launch replicated ClickHouse container for E2E tests
+        if: matrix.replicated == true
+        run: TENSORZERO_CLICKHOUSE_VERSION=${{ matrix.clickhouse_version.tag }} docker compose -f tensorzero-core/tests/e2e/docker-compose.replicated.yml up clickhouse-01 clickhouse-02 clickhouse-03 --wait
 
       # Make an HTTP request to ClickHouse and check that the version matches '${{ matrix.clickhouse_version }}'
       - name: Check ClickHouse version
@@ -396,7 +402,8 @@ jobs:
       - name: Build the gateway for E2E tests
         run: cargo build-e2e
 
-      - name: Launch the gateway for E2E tests
+      - name: Launch the gateway for E2E tests (not configured for replication)
+        if: matrix.replicated == false
         run: |
           cargo run-e2e > e2e_logs.txt 2>&1 &
             count=0
@@ -412,7 +419,33 @@ jobs:
             done
           echo "GATEWAY_PID=$!" >> $GITHUB_ENV
 
-      - name: Test (Rust)
+      - name: Launch the gateway for E2E tests (configured for replication)
+        if: matrix.replicated == true
+        env:
+          TENSORZERO_CLICKHOUSE_CLUSTER_NAME: "tensorzero_e2e_tests_cluster"
+        run: |
+          cargo run-e2e > e2e_logs.txt 2>&1 &
+            count=0
+            max_attempts=10
+            while ! curl -s -f http://localhost:3000/health >/dev/null 2>&1; do
+              echo "Waiting for gateway to be healthy..."
+              sleep 1
+              count=$((count + 1))
+              if [ $count -ge $max_attempts ]; then
+                echo "Gateway failed to become healthy after $max_attempts attempts"
+                exit 1
+              fi
+            done
+          echo "GATEWAY_PID=$!" >> $GITHUB_ENV
+
+      - name: Test (Rust, not replicated)
+        if: matrix.replicated == false
+        run: cargo test-e2e-no-creds
+
+      - name: Test (Rust, replicated)
+        if: matrix.replicated == true
+        env:
+          TENSORZERO_CLICKHOUSE_CLUSTER_NAME: "tensorzero_e2e_tests_cluster"
         run: cargo test-e2e-no-creds
 
       - name: Print e2e logs
@@ -430,7 +463,6 @@ jobs:
       TENSORZERO_SKIP_LARGE_FIXTURES: 1
       R2_ACCESS_KEY_ID: ${{ secrets.R2_ACCESS_KEY_ID }}
       R2_SECRET_ACCESS_KEY: ${{ secrets.R2_SECRET_ACCESS_KEY }}
-
 
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
