--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -145,6 +145,7 @@ aws-credential-types = { version = "1.2.2", features = [
 http-body-util = "0.1.3"
 urlencoding = "2.1.3"
 ts-rs = { workspace = true }
+image = "0.25.6"
 
 [build-dependencies]
 built = { version = "0.8.0", features = ["git2"] }
